# riplakish

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  schema.sql  wranger.toml  wrangler.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: Login.svelte  Qr.svelte
src/: db.rs  lib.rs  main.rs  statics.rs
