[package]
name = "riplakish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.1", features = ["json"] }
axum-client-ip = { version = "0.5.0" }
tower-http = { version = "0.5.0", features = ["cors"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlite = { version = "0.32.0" }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.31" }
rand = { version = "0.8.5" }
