[package]
name = "riplakish"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
axum = { version = "0.7.1" }
axum-client-ip = { version = "0.5.0" }
tower-http = { version = "0.5.0", features = ["cors"] }
sqlite = { version = "0.32.0" }
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.31" }
rand = { version = "0.8.5" }
env_logger = "0.11.3"
serde_json = "1.0.116"

[lib]
crate-type = ["cdylib"]

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
worker = { version = "*" }

[profile.release.'cfg(any(target_arch = "wasm32"))']
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
